# openGl-playground

./: .gitignore  CMakeLists.txt  README.md
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
shaders/: hello.frag  hello.vert  trig2.frag
src/: app.cpp  app.h  main.cpp
src/common/: loadShaders.cpp  triangleVAO.cpp
